--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
     "/**/node_modules/**",
     "/.vscode/**",
     "/**/lesson2/**",
-    "/**/abc.scss"
+    "/**/abc.scss",
+    "/**/lesson7/**"
   ],
   "liveSassCompile.settings.formats": [
     {
@@ -13,5 +14,7 @@
       "savePath": "~/../css/",
       "savePathReplacementPairs": null
     }
-  ]
+  ],
+  "liveSassCompile.settings.useNewCompiler": true,
+  "liveSassCompile.settings.autoprefix": []
 }
